<resources>
    <string name="app_name">ELMA</string>
    <string name="catering">Catering Services</string>
    <string name="renovation">Renovation Services</string>
    <string name="private_lesson">Private Lesson Services</string>
    <string name="text">Text</string>
    <string name="profile_avatar_of_teachers">Profile avatar of teachers</string>

    <string name="listItem1">White Company</string>
    <string name="listItem2">Red Corparation</string>
    <string name="listItem3">Blue Company</string>
    <string name="listItem4">Kebab World</string>
    <string name="listItem5">International Foods</string>
    <string name="listItem6">Homemade and Delicious</string>
    <string name="listItem7">Fine Dining</string>
    <string name="listItem8">Good Food</string>
    <string name="listItem9">Yellow Corporation</string>
    <string name="listItem10">Western Company</string>
    <string name="listItem11">Eastern Company</string>
    <string name="listItem12">Northern Company</string>
    <string name="listItem13">Pink Corperation</string>
    <string name="listItem14">Purple Food</string>
    <string name="listItem15">Good Company</string>
    <string name="listItem16">Heavenly Delight</string>
    <string name="listItem17">Farm Food</string>
    <string name="listItem18">Rural Corporation</string>

    <string name="listItem1Price">120.00</string>
    <string name="listItem2Price">10.50</string>
    <string name="listItem3Price">55.99</string>
    <string name="listItem4Price">15.99</string>
    <string name="listItem5Price">130.70</string>
    <string name="listItem6Price">50.00</string>
    <string name="listItem7Price">200.00</string>
    <string name="listItem8Price">78.00</string>
    <string name="listItem9Price">66.55</string>
    <string name="listItem10Price">74.00</string>
    <string name="listItem11Price">33.00</string>
    <string name="listItem12Price">44.00</string>
    <string name="listItem13Price">27.45</string>
    <string name="listItem14Price">10.00</string>
    <string name="listItem15Price">88.00</string>
    <string name="listItem16Price">30.00</string>
    <string name="listItem17Price">44.00</string>
    <string name="listItem18Price">76.00</string>

    <string name="listItem1address">Rose Street, 1. Avenue, Istanbul/Turkey, 34810</string>
    <string name="listItem2address">Lily Street, 12. Avenue, Ankara/Turkey, 34810</string>
    <string name="listItem3address">Tulip Street, 31. Avenue, Izmir/Turkey, 34810</string>
    <string name="listItem4address">Orchid Street, 5. Avenue, Bursa/Turkey, 34810</string>
    <string name="listItem5address">Carnation Street, 8. Avenue, Antalya/Turkey, 34810</string>
    <string name="listItem6address">Freesia Street, 222. Avenue, Adana/Turkey, 34810</string>
    <string name="listItem7address">Hyacinth Street, 55. Avenue, Konya/Turkey, 34810</string>
    <string name="listItem8address">Preuvian Lily Street, 58. Avenue, Gaziantep/Turkey, 34810</string>
    <string name="listItem9address">Chrysanthemum Street, 94. Avenue, Mersin/Turkey, 34810</string>
    <string name="listItem10address">Galdious Street, 27. Avenue, Diyarbakir/Turkey, 34810</string>
    <string name="listItem11address">Anemone Street, 73. Avenue, Kayseri/Turkey, 34810</string>
    <string name="listItem12address">Daffodil Street, 376. Avenue, Samsun/Turkey, 34810</string>
    <string name="listItem13address">Poppy Street, 28. Avenue, Denizli/Turkey, 34810</string>
    <string name="listItem14address">Sunflower Street, 72. Avenue, Eskisehir/Turkey, 34810</string>
    <string name="listItem15address">Aconite Street, 27. Avenue, Malatya/Turkey, 34810</string>
    <string name="listItem16address">Kalmia Street, 28. Avenue, Sanliurfa/Turkey, 34810</string>
    <string name="listItem17address">Larkspur Street, 47. Avenue, Kahramanmaras/Turkey, 34810</string>
    <string name="listItem18address">Iris Street, 26. Avenue, Erzurum/Turkey, 34810</string>

    <string name="order_details">Order Details</string>
    <string name="company_information">Company Information</string>
    <string name="send_order_information">Send Order Information</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="contact_name">Contact Name</string>
    <string name="number_of_days">Number of days</string>
    <string name="number_of_meals">Number of meals</string>
    <string name="daily_service_price">Daily Service Price</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="elma">ELMA</string>
    <string name="mail">Mail</string>
    <string name="password">Password</string>
    <string name="xxx_gmail_com">xxx@gmail.com</string>
    <string name="enter_your_mail_address_here">Enter your mail address here</string>
    <string name="enter_your_password_here">Enter your password here</string>
    <string name="sign_up">Sign Up</string>
    <string name="text_here">Text Here</string>
</resources>